--- a/ex1.html
+++ b/ex1.html
@@ -22,7 +22,30 @@
                 // Invalid age: Age must be between 10 and 40.
                 // Invalid email: Email must contain the character @.
                 // Empty password: Password must be non-empty.
+                let form = document.forms["formName"];
+
+                const id = form["id"].value;
+                const age = form["age"].value;
+                const email = form["email"].value;
+                const password = form["password"].value;
                 var errorMessages="";
+
+                if(id.length >10){
+                    errorMessages+= "ID must have a maximum of 10 characters.\n"
+                }
+
+                if (age < 10 || age > 40){
+                    errorMessages+= "Age must be between 10 and 40.\n"
+                }
+
+                if(!email.includes("@")){
+                    errorMessages+= "Email must contain the character '@'.\n"
+                }
+
+                if(password.trim() === ""){
+                    errorMessages+= "Password must be non empty.\n"                    
+                }
+
                 
                 
             }
