--- a/ex1.html
+++ b/ex1.html
@@ -28,7 +28,7 @@
             let errorMessages = "";
 
             if (email.indexOf("@") == -1) {
-                errorMessages += "Email must contain the character @.\n";  // remove quotes
+                errorMessages += "Email must contain the character @.\n"; 
             }
 
             if (!password || password.length === 0) {
